--- a/estilo.css
+++ b/estilo.css
@@ -4,6 +4,68 @@ body {
     overflow-x: hidden;
 }
 
+.tela-login {
+    background-color: #FFFFFF;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.tela-login > img {
+    width: 130px;
+    height: 92px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.caixa-login {
+    height: 54px;
+    border: 1px solid #D7D7D7;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    width: 261px;
+    height: 54px;
+    border-radius: 4px;
+    margin-bottom: 15px;
+}
+
+::placeholder {
+    color: #AEAEAE;
+    opacity: 1;
+    margin-left: 10px;
+    text-align: center;
+}
+
+.botao-entrar {
+    width: 109px;
+    height: 45px;
+    background-color: #E7E7E7;
+    border-radius: 9px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.botao-entrar > p {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    color: #696969;
+}
+
+.escondido {
+    display: none;
+}
+
 header {
     width: 100vw;
     height: 80px;
@@ -31,10 +93,11 @@ header {
 
 main {
     width: 100vw;
-    height: Calc(100vh - 1580px);
+    height: Calc(100vh - 200px);
     background-color: #f3f3f3;
     margin-bottom: 80px;
     margin-top: 105px;
+    overflow-y: auto;
 }
 
 .chat {
@@ -100,10 +163,4 @@ input {
     font-weight: normal;
     font-size: 18px;
     border: none;
-}
-
-::placeholder {
-    color: #000000;
-    opacity: 1;
-    margin-left: 10px;
 }
