--- a/estilo.css
+++ b/estilo.css
@@ -164,3 +164,69 @@ input {
     font-size: 18px;
     border: none;
 }
+
+.lista-participantes {
+    background-color: #FFFFFF;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    width: 70vw;
+    height: 100vh;
+    z-index: 5;
+
+}
+
+.opcoes-escolha {
+    margin: 0 40px;
+    margin-top: 25px;
+    margin-bottom: 35px;
+    text-align: center;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    color: #000000;
+}
+
+.caixa-opcoes {
+    display: flex;
+    justify-content: space-between;
+}
+
+.caixa-opcoes > img {
+    margin-right: 25px;
+}
+
+.opcoes-selecionar {
+    display: flex;
+    margin: 15px 0;
+    align-items: center;
+}
+
+.separador-pessoas {
+    display: flex;
+    align-items: center;
+}
+
+.opcoes-selecionar img {
+    margin-left: 18px;
+    width: 23px;
+}
+
+.opcoes-selecionar p {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    color: #000000;
+}
+
+.opacidade {
+    background: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 4;
+    width: 100vw;
+    height: 100vh;
+}
