Versão 1.12 - Posição arrumada do icone marcado da opção visibilidade

--- a/estilo.css
+++ b/estilo.css
@@ -198,6 +198,10 @@ input {
     justify-content: space-between;
 }
 
+.caixa-visibilidade > img {
+    margin-right: 25px;
+}
+
 .caixa-opcoes > img {
     margin-right: 25px;
 }
