Versão 1.13 - Overflow-x hidden na caixa-opções, por causa de nicks longos

--- a/estilo.css
+++ b/estilo.css
@@ -191,6 +191,7 @@ input {
 .caixa-opcoes {
     display: flex;
     justify-content: space-between;
+    overflow-x: hidden;
 }
 
 .caixa-visibilidade {
